--- a/index.html
+++ b/index.html
@@ -11,8 +11,30 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter city name" spellcheck="false">
-            <button><img class="search-button" src="./images/search-icon-png-21.png" /> </button>
+            <button><img class="search-button" src="./images/search.png" /> </button>
+        </div>
+        <div class="weather">
+            <img src="./images/rain.png" class="weather-icon">
+            <h1 class="temp">22°c</h1>
+            <h2 class="city">New York</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="./images/humidity.png" >
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humadity</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img src="./images/wind.png" >
+                    <div>
+                        <p class="wind">15 km/hour</p>
+                        <p>Wind Speed</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
